fix autoComplete scrollbar

--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -50,10 +50,17 @@ div::-webkit-scrollbar-track{
   bottom: 7px !important;
 }
 .ace_editor.ace_autocomplete .ace_scroller{
-  right: 11px !important;
+  right: 0px !important;
   bottom: 0px !important;
 }
+.ace_editor.ace_autocomplete .ace_scroller .ace_content{
+  width: 100% !important;
+}
+.ace_editor.ace_autocomplete .ace_scroller .ace_content .ace_rightAlignedText{
+  right: 7px;
+}
 .ace_editor.ace_autocomplete div::-webkit-scrollbar-track{
-  background-color: #fff;
+  background-color: transparent;
+  
 }
 
